rate not needed on le, get from item
